# SentimentAnalysis

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TODO  get_data.py  main.cpp
data/test/UTF8/: UTF8.txt
prototypes/UTF8/bit_manip/: main.cpp  small.txt
prototypes/UTF8/indexing/: main.cpp
prototypes/UTF8/utf8_str/: utf8_str.cpp  utf8_str.h
prototypes/buff_exchange/: exchange.cpp  tie.cpp
prototypes/python_parse/: parse_text.py
prototypes/queue/: CMakeLists.txt  condition_variable_example.cpp  job.cpp  job.h  job.hpp  main.cpp  main2.cpp  main3.cpp  queue.cpp  queue.h  queue_base.cpp  queue_base.h  test_worker.cpp  unique_lock.cpp  worker.cpp  worker.h  worker.hpp
prototypes/test_case/: test_case.cpp  test_case.h
prototypes/test_case/backup_queue/: Makefile  main.cpp  queue.cpp  queue.h  worker.cpp  worker.h
prototypes/test_case/queue/: main.cpp  worker.cpp  worker.h
prototypes/universal_ref/: main.cpp
prototypes/universal_reference/: class.cpp  class.h  main.cpp
src/: CMakeLists.txt  btree.hpp  count_words.cpp  count_words.h  holder.hpp  make_window.cpp  make_window.h  parse.cpp  parse.h  string_manip.c  string_manip.h  support.cpp  support.h  text_package.cpp  text_package.h  tqueue.hpp  tqueue_job.hpp  utf8_manip.cpp  utf8_manip.h  vectorizer.cpp  window.cpp  window.h  word.cpp  word.h
src/libs/b_tree/: b_tree.cpp  b_tree.h  bnode.cpp  bnode.h  data_holder.cpp  data_holder.h  datum.cpp  datum.h  holder.cpp  holder.h  node.cpp  node.h
src/libs/new_b_tree/: bnode.h  holder.cpp  holder.h
src/vectorize/: CMakeLists.txt  parse.cpp  parse.h  queue.hpp  text_package.cpp  text_package.h  tqueue.hpp  utf8_manip.cpp  utf8_manip.h  utf8_str.cpp  utf8_str.h  window.cpp  window.h  window_delims.cpp  window_delims.h  word.cpp
testing/UTF8/: main.c  utf.c
testing/UTF8/bit_manip/: main.cpp
testing/UTF8/utf8_str/: main.cpp
testing/UTF8_copy/: main.cpp
testing/python_binding/: hello.c
testing/python_parse/: backup_graph.py  parse_text.py  vectorize.py
testing/unique_ptr/: main.cpp
tests/: CMakeLists.txt  big_o.cpp  big_o.h  support.cpp  support.h  template.cpp  test_btree.h  test_case.cpp  test_case.h  test_handler.h  test_holder.h  test_parse.h  test_string_manip.h  test_window.h  text_package.cpp  text_package.h  time_btree.h
tests/b_tree/: CMakeLists.txt  main.cpp
tests/cxxtest-4.3/build_tools/cmake/: CxxTest.cmake
tests/long_parse/: CMakeLists.txt  main.cpp  test_parse.cpp  test_parse.h
tests/parse/: CMakeLists.txt  backup_CMakeLists.txt  long_parse.cpp  main.cpp  short_parse.cpp  test_parse.cpp  test_parse.h
tests/parse/UTF8/: UTF8.txt  sample.txt  small.txt
tests/parse/parse/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/queue/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
tests/temp/: main.cpp  text_package.h
tests/testing_classes/: case.hpp  config.hpp  main.cpp  performance.hpp  result.hpp  timer.hpp
tests/text_samples/: big.txt  comment.txt
tests/window/: CMakeLists.txt  main.cpp  support.cpp  support.h
tools/: get_data.py  git_update.py  update_and_test.py  update_run_tests.py  valgrind_test.py
